# scanner

./: CMakeLists.txt  README.md
include/: header.hpp  scan_result.hpp  thread_scan.hpp  type_file.hpp
src/: main.cpp  scan_result.cpp  thread_scan.cpp  type_file.cpp
